--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -321,6 +321,10 @@ watchers:
     repo: kubernetes-monitoring/kubernetes-mixin
     branch: master
     commit: 3a6af8f5e9b16441308bcd57ad3f5bcaa03d1d68
+  - type: github_commit
+    repo: gluster/gluster-mixins
+    branch: master
+    commit: a6a02d24ffe92ee38fcfb80f38fc75c4f952e626
   
   # The monitoring stack is deployed using manifests generated from coreos/kube-prometheus
   #- type: docker_registry
