--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -18,6 +18,7 @@ spec:
   nodeSelector:
     beta.kubernetes.io/os: linux
     capability/general-purpose: 'yes'
+  podMonitorSelector: {}
   replicas: 1
   externalUrl: https://infra.{{ web_base_domain }}/prometheus/
   resources:
