--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/apcups.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/apcups.yaml.j2
@@ -2,13 +2,13 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app: gluster-exporter
-  name: gluster-exporter
+    app: apcups-exporter
+  name: apcups-exporter
   namespace: monitoring
 spec:
   endpoints:
-  - interval: 30s
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
   selector:
     matchLabels:
-      prometheus-target: gluster-exporter
+      prometheus-target: apcups-exporter
