--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/fluent-bit.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/fluent-bit.yaml.j2
@@ -2,16 +2,17 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app: zonemta
-  name: zonemta
+    app: fluent-bit
+  name: fluent-bit
   namespace: monitoring
 spec:
   endpoints:
-  - interval: 30s
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
+    path: /api/v1/metrics/prometheus
   namespaceSelector:
     matchNames:
-    - default
+    - logging
   selector:
     matchLabels:
-      prometheus-target: zonemta
+      prometheus-target: fluent-bit
