--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gluster.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gluster.yaml.j2
@@ -2,16 +2,13 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app: ingress-nginx
-  name: ingress-nginx
+    app: gluster-exporter
+  name: gluster-exporter
   namespace: monitoring
 spec:
   endpoints:
-  - interval: 30s
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
-  namespaceSelector:
-    matchNames:
-    - ingress-nginx
   selector:
     matchLabels:
-      prometheus-target: ingress-nginx
+      prometheus-target: gluster-exporter
