--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/grafana.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/grafana.yaml.j2
@@ -7,7 +7,7 @@ metadata:
   namespace: monitoring
 spec:
   endpoints:
-  - interval: 15s
+  - interval: {{ (15 * service_monitors.interval_factor | float) | int }}s
     port: http
   selector:
     matchLabels:
