--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
@@ -9,14 +9,14 @@ spec:
   endpoints:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
     honorLabels: true
-    interval: 30s
+    interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: https-main
     scheme: https
     scrapeTimeout: 30s
     tlsConfig:
       insecureSkipVerify: true
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    interval: 30s
+    interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: https-self
     scheme: https
     tlsConfig:
