--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeControllerManager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeControllerManager.yaml.j2
@@ -7,7 +7,7 @@ metadata:
   namespace: monitoring
 spec:
   endpoints:
-  - interval: 30s
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     metricRelabelings:
     - action: drop
       regex: etcd_(debugging|disk|request|server).*
