--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeScheduler.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeScheduler.yaml.j2
@@ -2,18 +2,17 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app: coredns
-  name: coredns
+    app: kube-scheduler
+  name: kube-scheduler
   namespace: monitoring
 spec:
   endpoints:
-  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    interval: 30s
+  - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: http-metrics
-  jobLabel: prometheus-target
+  jobLabel: k8s-app
   namespaceSelector:
     matchNames:
     - kube-system
   selector:
     matchLabels:
-      prometheus-target: kube-dns
+      prometheus-target: kube-scheduler
