--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
@@ -12,6 +12,7 @@ spec:
   endpoints:
   - honorLabels: true
     port: http
+    interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
   selector:
     matchLabels:
       prometheus-target: prometheus-operator
