--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/release-watcher.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/release-watcher.yaml.j2
@@ -7,7 +7,7 @@ metadata:
   namespace: monitoring
 spec:
   endpoints:
-    - interval: 120s
+    - interval: {{ (120 * service_monitors.interval_factor | float) | int }}s
       port: metrics
   namespaceSelector:
     matchNames:
