Disable unused collector on gluster-exporter

--- a/ansible/install_infra/roles/glusterfs-server-install/templates/gluster-exporter.toml.j2
+++ b/ansible/install_infra/roles/glusterfs-server-install/templates/gluster-exporter.toml.j2
@@ -43,7 +43,7 @@ disabled = false
 [collectors.gluster_volume_status]
 name = "gluster_volume_status"
 sync-interval = 15
-disabled = false
+disabled = true
 
 [collectors.gluster_volume_heal]
 name = "gluster_volume_heal"
