--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeControllerManager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kubeControllerManager.yaml.j2
@@ -13,6 +13,15 @@ spec:
       regex: etcd_(debugging|disk|request|server).*
       sourceLabels:
       - __name__
+    # Drop unused metrics
+    - action: drop
+      regex: ClusterRoleAggregator.*
+      sourceLabels:
+      - __name__
+    - action: drop
+      regex: workqueue_work_.*
+      sourceLabels:
+      - __name__
     port: http-metrics
   jobLabel: k8s-app
   namespaceSelector:
