--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/alertmanager.yaml.j2
@@ -8,6 +8,12 @@ metadata:
 spec:
   endpoints:
   - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+    metricRelabelings:
+    # Drop unused metrics
+    - action: drop
+      regex: alertmanager_http_(request|response)_.*
+      sourceLabels:
+      - __name_  
     port: web
   selector:
     matchLabels:
