--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
@@ -10,6 +10,12 @@ spec:
   - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
     honorLabels: true
     interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+    metricRelabelings:
+    # Drop unused metrics
+    - action: drop
+      regex: kube_pod_(init_)?container_status_(.*)_reason
+      sourceLabels:
+      - __name__
     port: https-main
     scheme: https
     scrapeTimeout: 30s
