--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -26,15 +26,15 @@ spec:
         - --collector.systemd
         - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+)($|/)
         - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
-        image: "{{ kubernetes_exporter_node_exporter.container.repo }}/{{ kubernetes_exporter_node_exporter.container.image }}:{{ kubernetes_exporter_node_exporter.container.tag }}"
+        image: "{{ node_exporter.container.repo }}/{{ node_exporter.container.image }}:{{ node_exporter.container.tag }}"
         name: node-exporter
         resources:
           limits:
-            cpu: {{ kubernetes_exporter_node_exporter.container.limits_cpu }}
-            memory: {{ kubernetes_exporter_node_exporter.container.limits_memory }}
+            cpu: {{ node_exporter.container.limits_cpu }}
+            memory: {{ node_exporter.container.limits_memory }}
           requests:
-            cpu: {{ kubernetes_exporter_node_exporter.container.requests_cpu }}
-            memory: {{ kubernetes_exporter_node_exporter.container.requests_memory }}
+            cpu: {{ node_exporter.container.requests_cpu }}
+            memory: {{ node_exporter.container.requests_memory }}
         volumeMounts:
         - mountPath: /host/proc
           name: proc
