--- a/ansible/install_infra/roles/nginx/templates/logs.conf.j2
+++ b/ansible/install_infra/roles/nginx/templates/logs.conf.j2
@@ -1,7 +1,9 @@
 # {{ ansible_managed }}
 
 #log_format combined 	'$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"';
-log_format main 		'$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $request_length $body_bytes_sent';
+
+# From https://docs.nginx.com/nginx/admin-guide/monitoring/logging/
+log_format main         '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" rt=$request_time uct="$upstream_connect_time" uht="$upstream_header_time" urt="$upstream_response_time"';
 
 {% for nginx_extra_log_format in nginx_extra_log_formats %}
 log_format {{ nginx_extra_log_format.name }} '{{ nginx_extra_log_format.format }}';
