--- a/ansible/install_applications/roles/auth-openldap.deploy/app/config/my-env.startup.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/config/my-env.startup.yaml.j2
@@ -61,3 +61,6 @@ LDAP_REMOVE_CONFIG_AFTER_SETUP: true
 
 # ssl-helper environment variables prefix
 LDAP_SSL_HELPER_PREFIX: ldap # ssl-helper first search config from LDAP_SSL_HELPER_* variables, before SSL_HELPER_* variables.
+
+# Do not perform any chown to fix file ownership 
+DISABLE_CHOWN: false
