--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -430,6 +430,6 @@ watchers:
     image: {{ ttrss.container.from_image }}
     tag: {{ ttrss.container.from_tag }}
     includes:
-      - amd64.*
+      - amd64-[0-9]+\.[0-9]+.*
     excludes:
       - amd64-latest
