Add node-mixin and update node rules/alerts/dashboards

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -319,6 +319,12 @@ watchers:
     repo: kubernetes-monitoring/kubernetes-mixin
     branch: master
     commit: c5411dde8ff084e343e06f4075a632811aeca46a
+  # node_exporter isn't installed using this repo
+  # We only use the mixin at https://github.com/prometheus/node_exporter/tree/master/docs/node-mixin
+  - type: github_commit
+    repo: prometheus/node_exporter
+    branch: master
+    commit: d3478a207ebc665d4bd06c3dff5e9fb0a5e44eff
   - type: github_commit
     repo: gluster/gluster-mixins
     branch: master
