--- a/ansible/install_applications/roles/monitoring-kubernetes.deploy/app/deploy/kube-dns.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kubernetes.deploy/app/deploy/kube-dns.yaml.j2
@@ -11,7 +11,7 @@ spec:
   selector:
     k8s-app: kube-dns
   ports:
-  - name: http-metrics
+  - name: metrics
     port: 9153
     targetPort: 9153
     protocol: TCP
