--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
-    app.kubernetes.io/version: v0.31.1
+    app.kubernetes.io/version: {{ prometheus_operator.container.tag }}
     app: prometheus-operator
   name: prometheus-operator
   namespace: monitoring
@@ -15,4 +15,7 @@ spec:
     interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
   selector:
     matchLabels:
+      app.kubernetes.io/component: controller
+      app.kubernetes.io/name: prometheus-operator
+      app.kubernetes.io/version: {{ prometheus_operator.container.tag }}
       prometheus-target: prometheus-operator
