Add homeassistant ldap-auth-sh to watchers

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -123,6 +123,10 @@ watchers:
       - dev
       - rc
       - latest
+  - type: github_commit
+    repo: efficiosoft/ldap-auth-sh
+    branch: master
+    commit: 819f9233116e68b5af5a5f45167bcbb4ed412ed4
   - name: "HomeAssistant MySQL"
     type: docker_registry
     repo: registry-1.docker.io
