Add Grafana filter on LDAP group

--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/etc/ldap.toml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/etc/ldap.toml.j2
@@ -26,7 +26,7 @@ bind_dn = "{{ grafana.ldap.manager_dn }}"
 bind_password = '{{ grafana.ldap.manager_password }}'
 
 # User search filter, for example "(cn=%s)" or "(sAMAccountName=%s)" or "(uid=%s)"
-search_filter = "(cn=%s)"
+search_filter = "(&(cn=%s)(objectClass=inetOrgPerson)(memberOf={{ grafana.ldap.group }}))"
 
 # An array of base dns to search through
 search_base_dns = ["{{ grafana.ldap.base }}"]
