Add flannel to the watchers list

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -31,6 +31,15 @@ watchers:
     branch: master
     commit: 0d3c2f14b1fc239863c73e733be3c97712abebf1
   
+  #########
+  # Infra #
+  #########
+  - type: github_commit
+    repo: coreos/flannel
+    branch: master
+    commit: b30e6895ef6429d47eaee1a72047ca349b3b5de3
+
+
   ###############
   # Apps : Auth #
   ###############
