--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/prometheus_exporter/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/prometheus_exporter/deployment.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: elasticsearch-exporter
@@ -13,6 +13,10 @@ spec:
       maxSurge: 1
       maxUnavailable: 0
     type: RollingUpdate
+  selector:
+    matchLabels:
+      app: elasticsearch
+      app-component: elastic-exporter
   template:
     metadata:
       labels:
