--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: fluent-bit
@@ -10,6 +10,11 @@ metadata:
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
+  selector:
+    matchLabels:
+      app: fluent-bit
+      app-component: fluent-bit
+      kubernetes.io/cluster-service: "true"
   updateStrategy:
     type: RollingUpdate
   template:
