--- a/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/dashboard.yaml.j2
+++ b/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/dashboard.yaml.j2
@@ -101,7 +101,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: "{{ kubernetes_dashboard.container.image }}:{{ kubernetes_dashboard.container.tag }}"
+        image: "{{ kubernetes_dashboard.container.image }}"
         ports:
         - containerPort: 9090
           protocol: TCP
