--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -179,9 +179,9 @@ watchers:
   ################
   # TODO KO
   #  - type: docker_registry
-  #    repo: k8s.gcr.io
-  #    image: kubernetes-dashboard-amd64
-  #    tag: v1.10.1
+  #    repo: {{ kubernetes_dashboard.base_image.repo | default('registry-1.docker.io') }}
+  #    image: {{ kubernetes_dashboard.base_image.name }}
+  #    tag: {{ kubernetes_dashboard.base_image.tag }}
   #    excludes:
   #      - .*-beta.*
   #      - canary
